public-dart-eks/Kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${DART_PUBLICAPI_NAMESPACE}
