public-dart-eks/Kubernetes/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${DART_PUBLICAPI_NAMESPACE}
  name: ${DART_PUBLICAPI_DEPLOYMENT_NAME}
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ${DART_PUBLICAPI_APP_NAME}
      namespace: ${DART_PUBLICAPI_NAMESPACE}
      alpha.eksctl.io/nodegroup-name: ${DART_NODE_GROUP}
  replicas: ${DART_PUBLICAPI_MIN_REP}
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${DART_PUBLICAPI_APP_NAME}
        namespace: ${DART_PUBLICAPI_NAMESPACE}
        alpha.eksctl.io/nodegroup-name: ${DART_NODE_GROUP}
    spec:
      containers:
        - image: ${DART_PUBLICAPI_REPOSITORY}:${TAG}
          imagePullPolicy: Always
          name: ${DART_PUBLICAPI_APP_NAME}
          ports:
            - containerPort: 7000
          resources:
            requests:
              cpu: ${DART_PUBLICAPI_REQ_CPU}
              memory: ${DART_PUBLICAPI_REQ_MEM}
            limits:
              cpu: ${DART_PUBLICAPI_LIM_CPU}
              memory: ${DART_PUBLICAPI_LIM_MEM}
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 7000
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /storage
              name: ${DART_PUBLICAPI_VOLUME}
      volumes:
        - name: ${DART_PUBLICAPI_VOLUME}
          persistentVolumeClaim:
            claimName: ${DART_PUBLICAPI_PVC}
      nodeSelector:
        "eks.amazonaws.com/nodegroup": ${DART_NODE_GROUP}
