public-dart-eks/Kubernetes/setup.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${DART_PUBLICAPI_NAMESPACE}
  name: ${DART_PUBLICAPI_SERVICE_NAME}
spec:
  ports:
    - port: 80
      targetPort: 7000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: ${DART_PUBLICAPI_APP_NAME}
    namespace: ${DART_PUBLICAPI_NAMESPACE}
    alpha.eksctl.io/nodegroup-name: ${DART_NODE_GROUP}

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${DART_PUBLICAPI_NAMESPACE}
  name: ${DART_PUBLICAPI_INGRESS_NAME}
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # ingress.kubernetes.io/force-ssl-redirect: "true"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
{ "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: ${DART_PUBLICAPI_CERTIFICATE_ARN}
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: ${DART_PUBLICAPI_SERVICE_NAME}
              servicePort: 80
